[package]
name = "minesweeper"
version = "0.1.0"
authors = ["João Paiva <jgpaiva@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "lib_minesweeper"
]

[dependencies.lib_minesweeper]
path = "lib_minesweeper"

[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2.60"
log = "0.4.8"

js-sys = "0.3.32"
gloo = "0.2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.rand]
version = "0.7.3"
features = ["log"]

[dependencies.getrandom]
version = "0.1.14"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  'Attr',
  'CssStyleDeclaration',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlLiElement',
  'HtmlUListElement',
  'SvgElement',
  'SvgRectElement',
  'SvgTitleElement',
  'SvgDescElement',
  'console',
  'EventTarget',
  'MouseEvent',
  ]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
pretty_assertions = "0.6.1"
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3