[package]
name = "minesweeper"
version = "0.1.0"
authors = ["João Paiva <jgpaiva@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "lib_minesweeper"
]

[dependencies.lib_minesweeper]
path = "lib_minesweeper"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"

lazy_static = "1.4.0"
wasm-bindgen = "0.2.60"
log = "0.4.8"

js-sys = "0.3.32"
gloo = "0.2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.yew]
version = "0.14.3"
features = [
"web_sys"
]

[dependencies.rand]
version = "0.7.3"
features = ["log"]

[dependencies.getrandom]
version = "0.1.14"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  'Attr',
  'CssStyleDeclaration',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlLiElement',
  'HtmlUListElement',
  'SvgElement',
  'SvgRectElement',
  'SvgTitleElement',
  'SvgDescElement',
  'console',
  'EventTarget',
  'MouseEvent',
  ]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
pretty_assertions = "0.6.1"
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3