[package]
name = "lib_minesweeper"
version = "0.1.0"
authors = ["João Paiva <jgpaiva@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colored = "1.9.3"
serde = "1"
serde_derive = "1"

[dependencies.rand]
version = "0.8.5"
features = ["log"]

[dev-dependencies]
pretty_assertions = "0.6.1"